<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context="com.example.mynotes.PembayaranActivity">

    <LinearLayout
        android:id="@+id/tb_info_pembayaran"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:background="@color/base_red_color">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/info_pembayaran"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/sv_info_pembayaran"
        android:layout_below="@+id/tb_info_pembayaran"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#FFFFFF"
                android:padding="12sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_ricianharga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_pembayaran"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_total_pembayaran_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/_0"
                        android:layout_marginStart="2dp"
                        android:textColor="@color/base_red_color"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textSize="14sp"
                    android:text="@string/bayar_pesanan_sesuai_jumlah_di_atas"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#f0f0f0"/>

            <LinearLayout
                android:id="@+id/ll_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="horizontal"
                android:padding="12sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/_1"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info1"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:background="#FFFFFF">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/logo_bank"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_lebel_no_rek"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nomor_rekening"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/tv_no_rekening"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/norek"
                        android:textColor="#000000"
                        android:textSize="20sp"/>

                    <ImageView
                        android:id="@+id/iv_copy"
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/copy_rek"
                        tools:ignore="ContentDescription" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#f0f0f0"/>

            <LinearLayout
                android:id="@+id/ll_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:padding="12sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/_2"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info2"
                        android:textSize="16sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/_3"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info3"
                        android:textSize="16sp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#FFFFFF"
                android:padding="12sp">

                <Button
                    android:id="@+id/btn_upload_sekarang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_bukti_transfer_sekarang"
                    android:layout_marginTop="25dp"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/primary_button"/>

                <Button
                    android:id="@+id/btn_upload_nanti"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_bukti_transfer_nanti"
                    android:layout_marginTop="13dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/base_red_color"
                    android:background="@drawable/secondary_button"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>