<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:background="#FFFFFF"
    tools:context="com.example.mynotes.PengirimanActivity">

    <LinearLayout
        android:id="@+id/tb_pengiriman"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:background="@color/base_red_color">

        <ImageView
            android:id="@+id/iv_kembali7"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back"
            android:padding="10dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pengiriman"
            android:textSize="20sp"
            android:textColor="#ffff"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/sv_pengirim"
        android:layout_below="@+id/tb_pengiriman"
        android:layout_above="@id/ll_bottom_box_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_location_red"
                    android:text="@string/masukkan_alamat_pengiriman"
                    android:textColor="@color/base_red_color"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="2dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="7dp">

                    <TextView
                        android:id="@+id/tv_lnama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/nama_lengkap"/>

                    <EditText
                        android:id="@+id/et_nama"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/cth_khusnul_khatima"
                        android:paddingHorizontal="12dp"
                        android:inputType="text"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/linecolor"
                        tools:ignore="Autofill" />

                    <TextView
                        android:id="@+id/tv_lhp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/no_hp"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/et_hp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/cth_085255xxxxxx"
                        android:paddingHorizontal="12dp"
                        android:layout_marginTop="3dp"
                        android:inputType="number"
                        android:background="@drawable/linecolor"
                        tools:ignore="Autofill" />

                    <TextView
                        android:id="@+id/tv_ket_no_hp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/no_handphone_aktif_dan_bisa_dihubungi"
                        android:textColor="@color/base_red_color"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_lalamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/alamat"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/et_alamat"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/cth_perumahan_griya_mawang_indah_blok_a2"
                        android:layout_marginTop="3dp"
                        android:paddingHorizontal="12dp"
                        android:inputType="textCapSentences|textMultiLine"
                        android:background="@drawable/linecolor"
                        android:maxLength="2000"
                        android:maxLines="4"
                        tools:ignore="Autofill" />

                    <TextView
                        android:id="@+id/tv_ldet_alamat"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:text="@string/detail_alamat"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/et_detail"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/linecolor"
                        android:hint="@string/cth_samping_masjid_jami_abu_bakar_as_sidiq"
                        android:inputType="textCapSentences|textMultiLine"
                        android:maxLines="4"
                        android:paddingHorizontal="12dp"
                        tools:ignore="Autofill" />

                    <TextView
                        android:id="@+id/tv_ket_detail_alamat"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="2dp"
                        android:text="@string/keterangan_nama_jalan_no_rumah_dan_lain_lain"
                        android:textColor="@color/base_red_color"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#f0f0f0"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#FFFFFF"
                android:padding="12dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewCart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#f0f0f0"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#FFFFFF"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_rician_harga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rincian_harga"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    tools:ignore="DisableBaselineAlignment">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="3">

                        <TextView
                            android:id="@+id/tv_subtotal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="@string/subtotal"
                            android:textColor="#000"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_biaya_pengiriman"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/biaya_pengiriman"
                            android:textSize="14sp"
                            android:textColor="#000"
                            android:layout_marginBottom="8dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="2dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/tv_nominal_subtotal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_0"
                            android:textSize="14sp"
                            android:textColor="#000000"
                            android:layout_marginBottom="8dp"/>

                        <TextView
                            android:id="@+id/tv_nominal_ongkir"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rp_35_000_00"
                            android:textSize="14sp"
                            android:textColor="#000000"
                            android:layout_marginBottom="8dp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_bottom_box_button"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#f0f0f0"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="6dp">

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_pembayaran"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_nominal_total_pengiriman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/base_red_color"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:text="@string/_0"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_buat_pesanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="12dp"
            android:text="@string/buat_pesanan"
            android:textColor="#FFFFFF"
            android:background="@drawable/primary_button"/>
    </LinearLayout>
</RelativeLayout>